feat: add sorting to getAllPlants
- sorting with parameters (eg. "name,asc")
- refactored (cleaned up) code